--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
+title: Yueting Liu's Homepage
+page-top-title: Yueting Liu
 top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+home-subtitle: Yueting Liu&ensp;|&ensp;刘悦婷
+copyright-text: '&copy; Yueting Liu 2023-2025. All Rights Reserved.'
